--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Funnel.Tech</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="Microsoft Theme" content="zero 110, default">
-</head>
-
-<body bgcolor="#000000" text="#FFFFFF" link="#669966" vlink="#6699CC" alink="#999999">
-This is the Funnel.Tech site. 
+<body>
+<h1>Funnel.Tech</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
