--- a/OurVegasWedding/index.html
+++ b/OurVegasWedding/index.html
@@ -98,10 +98,20 @@
               of the following:</font></p>
             <div align="left"> 
               <!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
-                <!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/zero/zerbul1a.gif" width="15" height="15" hspace="13" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Arial, Helvetica"><font face="Arial, Helvetica, sans-serif">hour</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/zero/zerbul1a.gif" width="15" height="15" hspace="13" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Arial, Helvetica"><font face="Arial, Helvetica, sans-serif">phone call</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/zero/zerbul1a.gif" width="15" height="15" hspace="13" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Arial, Helvetica"><font face="Arial, Helvetica, sans-serif">limousine</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/zero/zerbul1a.gif" width="15" height="15" hspace="13" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Arial, Helvetica"><font face="Arial, Helvetica, sans-serif">baby car seat</font><!--mstheme--></font><!--msthemelist--></td></tr>
+              	<tr>
+              		<td>
+              			<ul>
+              				<li>one</li>
+              				<li>two</li>
+              				<li>three</li>
+              				<li>four</li>
+              			</ul>
+              		</td>
+              	</tr>
+                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">hour</font><!--mstheme--></font><!--msthemelist--></td></tr>
+                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">phone call</font><!--mstheme--></font><!--msthemelist--></td></tr>
+                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">limousine</font><!--mstheme--></font><!--msthemelist--></td></tr>
+                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">baby car seat</font><!--mstheme--></font><!--msthemelist--></td></tr>
               <!--msthemelist--></table><!--mstheme--><font face="Arial, Arial, Helvetica">
             </div>
             <!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
