--- a/OurVegasWedding/index.html
+++ b/OurVegasWedding/index.html
@@ -101,18 +101,18 @@
               	<tr>
               		<td>
               			<ul>
-              				<li>one</li>
-              				<li>two</li>
-              				<li>three</li>
-              				<li>four</li>
+              				<li><font face="Arial, Helvetica, sans-serif">hour</font></li>
+              				<li><font face="Arial, Helvetica, sans-serif">phone call</font></li>
+              				<li><font face="Arial, Helvetica, sans-serif">limousine</font></li>
+              				<li><font face="Arial, Helvetica, sans-serif">baby car seat</font></li>
               			</ul>
               		</td>
               	</tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">hour</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">phone call</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">limousine</font><!--mstheme--></font><!--msthemelist--></td></tr>
-                <!--msthemelist--><tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><!--mstheme--><font face="Arial, Helvetica, sans-serif">baby car seat</font><!--mstheme--></font><!--msthemelist--></td></tr>
-              <!--msthemelist--></table><!--mstheme--><font face="Arial, Arial, Helvetica">
+                <!--<tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">hour</font></font></td></tr>
+                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">phone call</font></font></td></tr>
+                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">limousine</font></font></td></tr>
+                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">baby car seat</font></font></td></tr>
+              --></table><!--mstheme--><font face="Arial, Arial, Helvetica">
             </div>
             <!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
             <!--msthemelist--></table><!--mstheme--><font face="Arial, Arial, Helvetica">
