--- a/OurVegasWedding/index.html
+++ b/OurVegasWedding/index.html
@@ -108,11 +108,7 @@
               			</ul>
               		</td>
               	</tr>
-                <!--<tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">hour</font></font></td></tr>
-                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">phone call</font></font></td></tr>
-                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">limousine</font></font></td></tr>
-                <tr><td valign="baseline" width="42"></td><td valign="top" width="100%"><font face="Arial, Helvetica, sans-serif">baby car seat</font></font></td></tr>
-              --></table><!--mstheme--><font face="Arial, Arial, Helvetica">
+                </table><!--mstheme--><font face="Arial, Arial, Helvetica">
             </div>
             <!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
             <!--msthemelist--></table><!--mstheme--><font face="Arial, Arial, Helvetica">
