Adding changes date to website

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <a href="./OurVegasWedding">Our Vegas Wedding</a>
   <br><br>
 <a href="./PNT-BALD">PNT - Bald Website</a>
+  <br><br>
+  Last update: 20241005.1633
 </body>
 </html>
